# harmonisation-of-football-tracking-data

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run_cdf_audit.py  run_final_evaluation.py  run_harmonization_evaluation.py  validate_kinematics.py
src/: config.py
src/evaluation/: __init__.py  datasets.py  metrics.py  models.py  serialization.py  stats.py
src/evaluation/diagnostics/: source_shift.py
src/evaluation/downstream/: comparisons.py  correction.py  experiments.py  plots.py  regimes.py  representation.py
src/harmonization/: __init__.py  cdf.py  dfl.py  events.py  kinematics.py  skillcorner.py  tracking.py  utils.py
tests/: test_correction.py  test_kinematic_pipeline.py  test_merge_tracking_cdf_export.py  test_normalize_events_cdf_export.py
