[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "ml-research"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "matplotlib==3.9.2",
    "pandas>=2.2,<3",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "kloppy>=3.18.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.3,<1.7",
    "scipy>=1.10",
]
